Actually wrap the anchor tags around the title

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="Ghost/report.html"></a>Ghost</li>
-      <li><a href="request/report.html"></a>request</li>
-      <li><a href="sails/report.html"></a>sails</li>
-      <li><a href="wp-calypso/report.html"></a>wp-calypso</li>
+      <li><a href="Ghost/report.html">Ghost</a></li>
+      <li><a href="request/report.html">request</a></li>
+      <li><a href="sails/report.html">sails</a></li>
+      <li><a href="wp-calypso/report.html">wp-calypso</a></li>
     </ul>
   </body>
 </html>
